fix issue with fitst rows overflowing the viewport

--- a/styles.css
+++ b/styles.css
@@ -10,6 +10,10 @@ body {
   font-family: Montserrat, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen-Sans, Ubuntu, Cantarell, 'Helvetica Neue', Helvetica, Arial, sans-serif;
 }
 
+#handsontable-container.handsontable {
+  height: 100%;
+}
+
 .place-your-ad-here {
   position: fixed;
   top: 20px;
